# venmo-auto-transfer-neue

./: .gitignore  README.md  pyproject.toml
venmo_auto_transfer/: __init__.py  __main__.py  debug.py
