[tool.poetry]
name = "venmo-auto-transfer"
version = "0.1.0"
description = "Wrapper for venmo-auto-cashout"
authors = ["Radon Rosborough <radon@intuitiveexplanations.com>"]

[tool.poetry.dependencies]
python = "^3.10"
venmo-auto-cashout = {git = "https://github.com/raxod502/venmo-auto-cashout.git", rev = "fork/1"}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
base58 = "^2.1.1"
cryptography = "^43.0.0"
vodozemac = "^0.9.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
